[package]
categories = ["concurrency", "data-structures"]
description = "ShardedQueue is currently the fastest collection which can be used under highest concurrency and load"
homepage = "https://github.com/ivanivanyuk1993/utility.sharded_queue"
keywords = ["concurrency", "concurrent-queue", "mpmc", "sharded-queue", "queue"]
license = "MIT OR Apache-2.0"
name = "sharded_queue"
readme = "readme.md"
repository = "https://github.com/ivanivanyuk1993/utility.sharded_queue"
version = "1.0.24"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
concurrent-queue = "2.2.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
crossbeam-queue = "0.3"
nameof = "1.2.2"

[[bench]]
name = "sharded_queue"
harness = false

[profile.release]
lto = true